<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_authenticationdefinition_enterpasscode"
            style="@style/TextInputLayoutOutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/marginstart_authenticationdefinition_textinputlayout"
            android:layout_marginTop="@dimen/margintop_authenticationdefinitionpasswordtab_entercode"
            android:layout_marginEnd="@dimen/marginend_authenticationdefinition_textinputlayout"
            app:helperText="@string/authenticationdefinition_helpertext"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_authenticationdefinition_entercode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/authenticationdefinition_hintpassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="@dimen/textsize_authenticationdefinitionpasswordtab_entercode" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_authenticationdefinition_confirmpasscode"
            style="@style/TextInputLayoutOutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textinputlayout_authenticationdefinition_enterpasscode"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/marginstart_authentication_textinputlayout"
            android:layout_marginTop="@dimen/margintop_authenticationdefinitionpasswordtab_confirmcode"
            android:layout_marginEnd="@dimen/marginend_authentication_textinputlayout"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_authenticationdefinition_confirmcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/authenticationdefinition_hintconfirmpassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textSize="@dimen/textsize_authenticationdefinitionpasswordtab_confirmcode" />

        </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>