...
        android:layout_marginTop="@dimen/margintop_authenticationdefinition_segmentedgroup"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="@dimen/borderwidth_authenticationdefinition_segmentedgroup"
        segmentedgroup:sc_corner_radius="@dimen/cornerradius_authenticationdefinition_segmentedgroup">

        <RadioButton
            android:id="@+id/radiobutton_authenticationdefinition_password"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/athenticationdefinition_password" />

        <RadioButton
...
