...

    <string name="verification_pleaseenterverificationcodehere">Please enter verification code here</string>

    <string name="registration_menudone">Next</string>
    <string name="registration_toolbartitle">Your Phone</string>
    <string name="registration_defultcountry">Select your country</string>
    <string name="registration_pleasepickcountry">Please pick a country</string>
    <string name="registration_pleasefillyournumber">Please fill your number</string>
    <string name="registration_phonehint">Phone number</string>

    <string name="phoneconfirmation_Pleasefillbox">Please fill box</string>
    <string name="athenticationdefinition_password">Password</string>
    <string name="authenticationdefinition_pattern">Pattern</string>
    <string name="authenticationdefinition_notmatch">Not match</string>
    <string name="authenticationdefinition_connectfordots">Connect at least four dots</string>
    <string name="authenticationdefinition_tryforsecondtime">Try for second time</string>
    <string name="authenticationdefinition_setsuccessful">Set successful</string>
    <string name="authenticationdefinition_pleasefilloutboxabove">Please fill out box above</string>
    <string name="authenticationdefinition_hintpassword">Password</string>
    <string name="authenticationdefinition_hintconfirmpassword">Confirm password</string>
...
