<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_authentication_enterpasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/marginstartend_authentication_enterpassword"
        android:layout_marginEnd="@dimen/marginstartend_authentication_enterpassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorSecondaryDark">

        <EditText
            android:id="@+id/edittext_authentication_entercode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/authentication_hintpassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textSize="@dimen/textsize_authentication_enterpassword" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>